v2022.1.7, improve support of older IDEs, refac, rework doc